# ft_sipping

./: README.md  pyproject.toml
ft_sipping/: __main__.py  cli.py
